"""
Cost Calculator - Simple cost estimation for queries
"""


class CostCalculator:
    """
    Calculates execution cost for parsed queries
    """

    def __init__(self, statistics=None):
        """
        Initialize cost calculator
        """
        self.statistics = statistics

    def get_cost(self, parsed_query):
        """
        Calculate execution cost for a parsed query

        """
        # TODO: Implement cost calculation logic
        return self._calculate_tree_cost(parsed_query.query_tree)

    def _calculate_tree_cost(self, tree):
        """
        Recursively calculate cost of query tree
        """
        # TODO: Implement tree cost calculation
        pass

    def calculate_node_cost(self, node):
        """
        Calculate cost for a specific node
        """
        # TODO: Implement node-specific cost calculation
        pass


def get_cost(parsed_query):
    """Calculate execution cost for a parsed query"""
    # TODO: Implement cost calculation logic
    pass