"""
Optimization Engine Module - Main interface for query optimization
"""

from ..parser.parser import Parser
# from .plan_optimizer import optimize_tree
# from .cost_calculator import get_cost


class OptimizationEngine:
    """
    Main optimization engine that provides query parsing,
    optimization, and cost calculation
    """

    def __init__(self):
        """Initialize the optimization engine"""
        self.parser = Parser()
        self.plan_optimizer = None  # Placeholder 
        self.cost_calulator = None  # Placeholder 

    def parse_query(self, query: str):
        """
        Parse a SQL query string into a ParsedQuery object

        """
        return self.parser.parse_query(query)

    def optimize_query(self, parsed_query):
        """
        Optimize a parsed query using optimization rules

        """
        # TODO: Implement query optimization
        pass

    def get_cost(self, parsed_query):
        """
        Calculate the execution cost of a parsed query
        """
        # TODO: Implement cost calculation
        pass
