"""
Plan Optimizer Module - Applies optimization rules to query trees
"""

from .rules import OptimizationRules


class PlanOptimizer:
    """
    Orchestrates the application of optimization rules to query plans
    """

    def __init__(self):
        """Initialize plan optimizer with optimization rules"""
        self.rules = OptimizationRules()

    def optimize_tree(self, tree):
        """
        Apply all optimization rules to query tree

        Args:
            tree: QueryTree to optimize

        Returns:
            Optimized QueryTree
        """
        # TODO: Implement optimization logic
        # Apply rules in optimal order
        optimized_tree = tree

        # Example rule application order:
        # 1. Push down selections
        # optimized_tree = self.rules.push_down_selection(optimized_tree)

        # 2. Push down projections
        # optimized_tree = self.rules.push_down_projection(optimized_tree)

        # 3. Combine selections
        # optimized_tree = self.rules.combine_selections(optimized_tree)

        # 4. Convert Cartesian products to joins
        # optimized_tree = self.rules.combine_cartesian_with_selection(
        #     optimized_tree
        # )

        # 5. Reorder joins
        # optimized_tree = self.rules.reorder_joins(optimized_tree)

        return optimized_tree

    def apply_rules(self, tree):
        """
        Apply specific optimization rules to the tree
        """
        # TODO: Implement selective rule application
        return self.optimize_tree(tree)